@@ -40,6 +40,8 @@ public class Ear extends Jar {
     private File deploymentDescriptor;
     private boolean descriptorAdded;
     private static final String XML_DESCRIPTOR_PATH = "META-INF/application.xml";
+    private static final String XML_DESCRIPTOR_PATH_LC =
+        XML_DESCRIPTOR_PATH.toLowerCase(Locale.ENGLISH);
 
     /**
      * Create an Ear task.
@@ -126,8 +128,8 @@ public class Ear extends Jar {
         // file is specified by the "appxml" attribute and in a
         // <fileset> element.
         String vPathLowerCase = vPath.toLowerCase(Locale.ENGLISH);
-        if (XML_DESCRIPTOR_PATH.equals(vPathLowerCase))  {
-            if (deploymentDescriptor != null
+        if (XML_DESCRIPTOR_PATH_LC.equals(vPathLowerCase))  {
+            if (deploymentDescriptor == null
                 || !FILE_UTILS.fileNameEquals(deploymentDescriptor, file)
                 || descriptorAdded) {
                 logWhenWriting("Warning: selected " + archiveType
